chore(ui-generator): fix text-assistive class causing overflow

--- a/packages/ui/src/styles/utils/helpers.css
+++ b/packages/ui/src/styles/utils/helpers.css
@@ -1,11 +1,14 @@
 @layer utils {
     .text-assistive {
-        -webkit-clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-        clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-        box-sizing: border-box;
         position: absolute;
-        margin: 0;
+        width: 1px;
+        height: 1px;
         padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border-width: 0;
 
         &:focus {
             -webkit-clip-path: none;
